added list, login page

--- a/login.html
+++ b/login.html
@@ -7,9 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div>Hello World!</div>
-    <ul>
-        <li>test1</li>
-    </ul>
+    <h1>LOGIN</h1>
 </body>
 </html>
