update code task for a15

--- a/Module 1/A15. Display and Position Properties/index.html
+++ b/Module 1/A15. Display and Position Properties/index.html
@@ -35,7 +35,7 @@
 
     <div>
       <div class="box-1">box1</div>
-      <div class="box-2">box2</div>
+      <div class="box-2 Cat">box2</div>
       <!-- for Advanced: uncomment line 33 -->
       <div class="box-3">box3</div>
     </div>
