added profile section

--- a/Module 1/A20. Resume Project/index2.html
+++ b/Module 1/A20. Resume Project/index2.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <main class="page-container">
-        <!-- MAIN -->
+        <!-- main panel -->
         <!-- <section class="main-container" id="main">
             <div class="overlay"></div>
             <div class="profile-thumb"></div>
@@ -37,11 +37,26 @@
             </a>
         </section> -->
 
-        <!-- ABOUT ME -->
-        <section class="about-container header" id="profile">
-            <div class="navigation-header">
+        <!-- profile header -->
+        <section class="aboutme-container" id="profile">
+            <!-- <div class="card profile-headercard">
+                <div class="profile-avatar"></div>
+                <div class="profile-header-text">
+                    <h1 class="name">Jonel Vivas Faeldon</h1>
+                    <h2 class="sub-name">Senior Frontend Engineer</h2>
+                    <ul class="contact-info">
+                        <li><i class="fa-solid fa-location-dot"></i>Calamba City</a></li>
+                        <li><i class="fa-brands fa-github-alt"></i>@jvfaeldon20</li>
+                        <li><i class="fa-solid fa-phone"></i>09171481701</li>
+                    </ul>
+                    <ul class="mail">
+                        <li><i class="fa-solid fa-envelope"></i>jonelfaeldon@gmail.com</li>
+                    </ul>
+                </div>
+            </div> -->
+            <div class="navigation-header header">
                 <ul class="nav-link">
-                    <li><a href="#" id="nav-profile">ABOUT ME</a></li>
+                    <li><a href="#profile" id="nav-profile">ABOUT ME</a></li>
                     <li><a href="#" id="nav-skill">SKILLS</a></li>
                     <li><a href="#" id="nav-project">PROJECTS</a></li>
                     <li><a href="#" id="nav-experience">EXPERIENCES</a></li>
